--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint src --fix --ext .js,.jsx,.ts,.tsx",
-    "postinstall1": "rn-nodeify --install crypto --hack --yarn"
+    "lint": "eslint src --fix --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@oneverse/identify": "^1.1.2",
@@ -21,8 +20,7 @@
     "native-base": "^3.4.6",
     "react": "18.1.0",
     "react-native": "0.68.2",
-    "react-native-crypto": "^2.2.0",
-    "react-native-randombytes": "^3.6.1",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
