--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-get-random-values": "^1.8.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
     "text-encoding-polyfill": "^0.6.7"
   },
