--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "oneverse",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -10,41 +11,48 @@
     "lint": "eslint src --fix --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@haskkor/react-native-pincode": "^1.22.6",
     "@oneverse/identify": "^1.1.2",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "add": "^2.0.6",
     "jsdk": "^1.0.0-Alpha.7",
     "mobx": "^6.6.0",
     "mobx-react": "^7.5.0",
     "native-base": "^3.4.6",
-    "react": "18.1.0",
+    "react": "18.2.0",
     "react-native": "0.68.2",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-keychain": "^8.0.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
-    "text-encoding-polyfill": "^0.6.7"
+    "react-native-vector-icons": "^9.1.0",
+    "scrypt-js": "^3.0.1",
+    "text-encoding-polyfill": "^0.6.7",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
+    "@babel/core": "^7.18.5",
     "@babel/plugin-proposal-decorators": "^7.18.2",
     "@babel/runtime": "^7.18.3",
     "@react-native-community/eslint-config": "^3.0.2",
-    "@types/jest": "^28.1.1",
+    "@types/jest": "^28.1.2",
     "@types/react-native": "^0.67.8",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
     "babel-jest": "^28.1.1",
-    "eslint": "^8.17.0",
+    "eslint": "^8.18.0",
     "jest": "^28.1.1",
     "metro-react-native-babel-preset": "^0.71.1",
-    "prettier": "^2.6.2",
-    "react-test-renderer": "18.1.0",
+    "prettier": "^2.7.1",
+    "react-test-renderer": "18.2.0",
     "rn-nodeify": "^10.3.0",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.4"
   },
   "resolutions": {
     "@types/react": "^17"
