--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.2.0",
     "scrypt-js": "^3.0.1",
-    "text-encoding-polyfill": "^0.6.7"
+    "text-encoding-polyfill": "^0.6.7",
+    "web3": "^1.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
