--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint src --fix --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint src --fix --ext .js,.jsx,.ts,.tsx",
+    "postinstall": "node_modules/.bin/rn-nodeify --install crypto,stream,events,http,https,url,assert,os --yarn"
   },
   "dependencies": {
     "@haskkor/react-native-pincode": "^1.22.6",
@@ -16,22 +17,30 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "add": "^2.0.6",
+    "@tradle/react-native-http": "^2.0.0",
+    "assert": "^1.1.1",
+    "events": "^1.0.0",
+    "https-browserify": "~0.0.0",
     "jsdk": "^1.0.0-Alpha.7",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.1",
     "native-base": "^3.4.7",
     "react": "18.2.0",
     "react-native": "0.69.0",
-    "react-native-get-random-values": "^1.8.0",
+    "react-native-crypto": "^2.1.0",
     "react-native-keychain": "^8.1.0",
+    "react-native-os": "^1.0.1",
+    "react-native-randombytes": "^3.0.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.2.0",
+    "readable-stream": "1.0.33",
     "scrypt-js": "^3.0.1",
+    "stream-browserify": "^1.0.0",
     "text-encoding-polyfill": "^0.6.7",
+    "url": "~0.10.1",
     "web3": "^1.7.4"
   },
   "devDependencies": {
@@ -67,5 +76,29 @@
       "json",
       "node"
     ]
+  },
+  "react-native": {
+    "crypto": "react-native-crypto",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify",
+    "https": "https-browserify",
+    "http": "@tradle/react-native-http",
+    "os": "react-native-os"
+  },
+  "browser": {
+    "crypto": "react-native-crypto",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify",
+    "https": "https-browserify",
+    "http": "@tradle/react-native-http",
+    "os": "react-native-os"
   }
 }
