--- a/package.json
+++ b/package.json
@@ -11,36 +11,41 @@
     "postinstall": "node_modules/.bin/rn-nodeify --install crypto,stream,events,http,https,url,assert,os --yarn"
   },
   "dependencies": {
+    "@aomi/common-service": "^1.0.5-Alpha.26",
     "@haskkor/react-native-pincode": "^1.22.6",
-    "@oneverse/identify": "^1.1.2",
+    "@oneverse/identify": "^1.5.0",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "@tradle/react-native-http": "^2.0.0",
-    "assert": "^1.1.1",
-    "events": "^1.0.0",
-    "https-browserify": "~0.0.0",
+    "@tradle/react-native-http": "^2.0.1",
+    "assert": "^2.0.0",
+    "events": "^3.3.0",
+    "https-browserify": "~1.0.0",
     "jsdk": "^1.0.0-Alpha.7",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.1",
     "native-base": "^3.4.7",
+    "object-path": "^0.11.8",
     "react": "18.2.0",
-    "react-native": "0.69.0",
-    "react-native-crypto": "^2.1.0",
+    "react-native": "0.69.1",
+    "react-native-crypto": "^2.2.0",
     "react-native-keychain": "^8.1.0",
-    "react-native-os": "^1.0.1",
-    "react-native-randombytes": "^3.0.0",
+    "react-native-os": "^1.2.6",
+    "react-native-pager-view": "^5.4.24",
+    "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.2.0",
-    "readable-stream": "1.0.33",
+    "readable-stream": "4.0.0",
     "scrypt-js": "^3.0.1",
-    "stream-browserify": "^1.0.0",
+    "stream-browserify": "^3.0.0",
     "text-encoding-polyfill": "^0.6.7",
-    "url": "~0.10.1",
+    "url": "~0.11.0",
     "web3": "^1.7.4"
   },
   "devDependencies": {
@@ -53,9 +58,9 @@
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
-    "babel-jest": "^28.1.1",
+    "babel-jest": "^28.1.2",
     "eslint": "^8.18.0",
-    "jest": "^28.1.1",
+    "jest": "^28.1.2",
     "metro-react-native-babel-preset": "^0.71.2",
     "prettier": "^2.7.1",
     "react-native-svg-transformer": "^1.0.0",
