--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "dependencies": {
     "@aomi/common-service": "^1.0.5-Alpha.26",
-    "@haskkor/react-native-pincode": "^1.22.6",
     "@oneverse/identify": "^1.6.0",
     "@react-native-async-storage/async-storage": "^1.17.7",
-    "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/material-top-tabs": "^6.2.1",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.2",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/material-top-tabs": "^6.2.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "@tradle/react-native-http": "^2.0.1",
+    "add": "^2.0.6",
     "assert": "^2.0.0",
     "events": "^3.3.0",
     "https-browserify": "~1.0.0",
@@ -33,10 +33,10 @@
     "react-native-crypto": "^2.2.0",
     "react-native-keychain": "^8.1.0",
     "react-native-os": "^1.2.6",
-    "react-native-pager-view": "^5.4.24",
+    "react-native-pager-view": "^5.4.25",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.14.0",
+    "react-native-screens": "^3.14.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
@@ -46,7 +46,8 @@
     "stream-browserify": "^3.0.0",
     "text-encoding-polyfill": "^0.6.7",
     "url": "~0.11.0",
-    "web3": "^1.7.4"
+    "web3": "^1.7.4",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -54,12 +55,13 @@
     "@babel/runtime": "^7.18.6",
     "@react-native-community/eslint-config": "^3.0.3",
     "@types/jest": "^28.1.4",
-    "@types/react-native": "^0.69.1",
+    "@types/react-native": "^0.69.2",
+    "@types/react-native-vector-icons": "^6.4.11",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
     "babel-jest": "^28.1.2",
-    "eslint": "^8.18.0",
+    "eslint": "^8.19.0",
     "jest": "^28.1.2",
     "metro-react-native-babel-preset": "^0.71.2",
     "prettier": "^2.7.1",
