--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@aomi/common-service": "^1.0.5-Alpha.26",
+    "@aomi/utils": "^1.0.2",
     "@oneverse/identify": "^1.6.0",
     "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.11",
