--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@aomi/common-service": "^1.0.5-Alpha.26",
     "@aomi/utils": "^1.0.2",
+    "@ethersproject/providers": "^5.6.8",
+    "@ethersproject/shims": "^5.6.0",
     "@oneverse/identify": "^1.6.0",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-clipboard/clipboard": "^1.10.0",
@@ -27,18 +29,19 @@
     "https-browserify": "~1.0.0",
     "jsdk": "^1.0.0-Alpha.7",
     "mobx": "^6.6.1",
-    "mobx-react": "^7.5.1",
-    "native-base": "^3.4.7",
+    "mobx-persist-store": "^1.0.6",
+    "mobx-react": "^7.5.2",
+    "native-base": "^3.4.8",
     "object-path": "^0.11.8",
     "react": "18.2.0",
     "react-native": "0.69.1",
     "react-native-crypto": "^2.2.0",
-    "react-native-keychain": "^8.1.0",
+    "react-native-keychain": "^8.1.1",
     "react-native-os": "^1.2.6",
     "react-native-pager-view": "^5.4.25",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.14.1",
+    "react-native-screens": "^3.15.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
@@ -65,7 +68,7 @@
     "babel-jest": "^28.1.2",
     "eslint": "^8.19.0",
     "jest": "^28.1.2",
-    "metro-react-native-babel-preset": "^0.71.2",
+    "metro-react-native-babel-preset": "^0.71.3",
     "prettier": "^2.7.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
