feat: get balance

--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint src --fix --ext .js,.jsx,.ts,.tsx",
-    "postinstall": "node_modules/.bin/rn-nodeify --install crypto,stream,events,http,https,url,assert,os --yarn"
+    "postinstall": "node_modules/.bin/rn-nodeify --install crypto,stream,events,http,https,url,assert,os,process --yarn"
   },
   "dependencies": {
     "@aomi/common-service": "^1.0.5-Alpha.26",
     "@aomi/utils": "^1.0.2",
     "@ethersproject/providers": "^5.6.8",
     "@ethersproject/shims": "^5.6.0",
+    "@ethersproject/units": "^5.6.1",
     "@oneverse/identify": "^1.6.0",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-clipboard/clipboard": "^1.10.0",
@@ -33,6 +34,7 @@
     "mobx-react": "^7.5.2",
     "native-base": "^3.4.8",
     "object-path": "^0.11.8",
+    "process": "^0.11.10",
     "react": "18.2.0",
     "react-native": "0.69.1",
     "react-native-crypto": "^2.2.0",
@@ -46,13 +48,11 @@
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.2.0",
-    "readable-stream": "4.0.0",
+    "readable-stream": "4.1.0",
     "scrypt-js": "^3.0.1",
     "stream-browserify": "^3.0.0",
     "text-encoding-polyfill": "^0.6.7",
-    "url": "~0.11.0",
-    "web3": "^1.7.4",
-    "yarn": "^1.22.19"
+    "url": "~0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -60,11 +60,11 @@
     "@babel/runtime": "^7.18.6",
     "@react-native-community/eslint-config": "^3.0.3",
     "@types/jest": "^28.1.4",
-    "@types/react-native": "^0.69.2",
+    "@types/react-native": "^0.69.3",
     "@types/react-native-vector-icons": "^6.4.11",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "babel-jest": "^28.1.2",
     "eslint": "^8.19.0",
     "jest": "^28.1.2",
