--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "@tradle/react-native-http": "^2.0.1",
     "add": "^2.0.6",
     "assert": "^2.0.0",
+    "decimal.js": "^10.3.1",
     "events": "^3.3.0",
     "https-browserify": "~1.0.0",
     "jsdk": "^1.0.0-Alpha.7",
     "mobx": "^6.6.1",
     "mobx-persist-store": "^1.0.6",
     "mobx-react": "^7.5.2",
-    "native-base": "^3.4.8",
+    "native-base": "^3.4.9",
     "object-path": "^0.11.8",
     "process": "^0.11.10",
     "react": "18.2.0",
@@ -59,15 +60,15 @@
     "@babel/plugin-proposal-decorators": "^7.18.6",
     "@babel/runtime": "^7.18.6",
     "@react-native-community/eslint-config": "^3.0.3",
-    "@types/jest": "^28.1.4",
+    "@types/jest": "^28.1.5",
     "@types/react-native": "^0.69.3",
     "@types/react-native-vector-icons": "^6.4.11",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
-    "babel-jest": "^28.1.2",
+    "babel-jest": "^28.1.3",
     "eslint": "^8.19.0",
-    "jest": "^28.1.2",
+    "jest": "^28.1.3",
     "metro-react-native-babel-preset": "^0.71.3",
     "prettier": "^2.7.1",
     "react-native-svg-transformer": "^1.0.0",
