--- a/package.json
+++ b/package.json
@@ -30,18 +30,21 @@
     "events": "^3.3.0",
     "https-browserify": "~1.0.0",
     "jsdk": "^1.0.0-Alpha.7",
+    "lokijs": "^1.5.12",
     "mobx": "^6.6.1",
     "mobx-persist-store": "^1.0.6",
     "mobx-react": "^7.5.2",
     "native-base": "^3.4.9",
     "object-path": "^0.11.8",
     "process": "^0.11.10",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-native": "0.69.1",
     "react-native-crypto": "^2.2.0",
     "react-native-keychain": "^8.1.1",
     "react-native-os": "^1.2.6",
     "react-native-pager-view": "^5.4.25",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
@@ -56,16 +59,17 @@
     "url": "~0.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.18.6",
-    "@babel/runtime": "^7.18.6",
+    "@babel/core": "^7.18.9",
+    "@babel/plugin-proposal-decorators": "^7.18.9",
+    "@babel/runtime": "^7.18.9",
     "@react-native-community/eslint-config": "^3.0.3",
     "@types/jest": "^28.1.6",
+    "@types/lokijs": "^1.5.7",
     "@types/react-native": "^0.69.3",
     "@types/react-native-vector-icons": "^6.4.11",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "babel-jest": "^28.1.3",
     "eslint": "^8.20.0",
     "jest": "^28.1.3",
