--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.4.4",
     "react-native-tab-view": "^3.1.1",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
     "readable-stream": "4.1.0",
     "scrypt-js": "^3.0.1",
