--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aomi/common-service": "^1.0.5-Alpha.26",
     "@aomi/utils": "^1.0.2",
+    "@ethersproject/contracts": "^5.6.2",
     "@ethersproject/providers": "^5.6.8",
     "@ethersproject/shims": "^5.6.0",
     "@ethersproject/units": "^5.6.1",
