feat: backup commit

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@aomi/common-service": "^1.0.5-Alpha.26",
+    "@aomi/react-native-media-manager": "^0.1.0",
     "@aomi/utils": "^1.0.2",
     "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
@@ -30,6 +31,7 @@
     "decimal.js": "^10.4.0",
     "events": "^3.3.0",
     "https-browserify": "~1.0.0",
+    "ipfs-http-client": "^58.0.0",
     "jsdk": "^1.0.0-Alpha.7",
     "lokijs": "^1.5.12",
     "mobx": "^6.6.2",
@@ -39,8 +41,8 @@
     "object-path": "^0.11.8",
     "process": "^0.11.10",
     "qrcode.react": "^3.1.0",
-    "react": "18.2.0",
-    "react-native": "0.70.0",
+    "react": "18.1.0",
+    "react-native": "0.70.1",
     "react-native-crypto": "^2.2.0",
     "react-native-keychain": "^8.1.1",
     "react-native-os": "^1.2.6",
