--- a/package.json
+++ b/package.json
@@ -10,52 +10,53 @@
     "lint": "eslint src --fix --ext .js,.jsx,.ts,.tsx",
     "postinstall": "node_modules/.bin/rn-nodeify --install crypto,stream,events,http,https,url,assert,os,process --yarn"
   },
+  "type": "module",
   "dependencies": {
     "@aomi/common-service": "^1.0.5-Alpha.26",
     "@aomi/react-native-media-manager": "^0.1.0",
     "@aomi/utils": "^1.0.2",
     "@ethersproject/contracts": "^5.7.0",
-    "@ethersproject/providers": "^5.7.1",
+    "@ethersproject/providers": "^5.7.2",
     "@ethersproject/shims": "^5.7.0",
     "@ethersproject/units": "^5.7.0",
     "@oneverse/identify": "^1.7.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
-    "@react-native-clipboard/clipboard": "^1.11.0",
-    "@react-navigation/bottom-tabs": "^6.3.3",
-    "@react-navigation/material-top-tabs": "^6.2.3",
-    "@react-navigation/native": "^6.0.12",
-    "@react-navigation/native-stack": "^6.8.0",
+    "@react-native-clipboard/clipboard": "^1.11.1",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/material-top-tabs": "^6.3.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "@tradle/react-native-http": "^2.0.1",
     "add": "^2.0.6",
     "assert": "^2.0.0",
-    "decimal.js": "^10.4.0",
+    "decimal.js": "^10.4.2",
     "events": "^3.3.0",
     "https-browserify": "~1.0.0",
+    "ipfs-http-client": "^59.0.0",
     "jsdk": "^1.0.0-Alpha.7",
-    "lokijs": "^1.5.12",
     "mobx": "^6.6.2",
     "mobx-persist-store": "^1.1.2",
     "mobx-react": "^7.5.3",
-    "native-base": "^3.4.15",
+    "native-base": "^3.4.21",
     "object-path": "^0.11.8",
     "process": "^0.11.10",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
-    "react-native": "0.70.1",
+    "react-native": "0.70.4",
     "react-native-crypto": "^2.2.0",
     "react-native-keychain": "^8.1.1",
     "react-native-os": "^1.2.6",
-    "react-native-pager-view": "^6.0.0",
+    "react-native-pager-view": "^6.0.2",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
-    "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.17.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^13.2.0",
-    "react-native-tab-view": "^3.1.1",
+    "react-native-svg": "^13.5.0",
+    "react-native-tab-view": "^3.3.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
-    "readable-stream": "4.1.0",
+    "readable-stream": "4.2.0",
     "scrypt-js": "^3.0.1",
     "stream-browserify": "^3.0.0",
     "text-encoding-polyfill": "^0.6.7",
@@ -81,7 +82,7 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
     "rn-nodeify": "^10.3.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.4"
   },
   "resolutions": {
     "@types/react": "^17"
