--- a/tsconfig.json
+++ b/tsconfig.json
@@ -120,8 +120,8 @@
   },
   "exclude": [
     "node_modules",
-    "babel.config.js",
-    "metro.config.js",
+    "babel.config.cjs",
+    "metro.config.cjs",
     "jest.config.js"
   ]
 }
