--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-native-crypto": "^2.2.0",
     "react-native-keychain": "^8.1.1",
     "react-native-os": "^1.2.6",
-    "react-native-pager-view": "^6.1.0",
+    "react-native-pager-view": "6.0.2",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.4.1",
@@ -62,11 +62,11 @@
     "url": "~0.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.1",
-    "@babel/plugin-proposal-decorators": "^7.19.1",
-    "@babel/runtime": "^7.19.0",
-    "@react-native-community/eslint-config": "^3.1.0",
-    "@types/jest": "^29.0.3",
+    "@babel/core": "^7.20.2",
+    "@babel/plugin-proposal-decorators": "^7.20.2",
+    "@babel/runtime": "^7.20.1",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@types/jest": "^29.2.2",
     "@types/lokijs": "^1.5.7",
     "@types/react-native": "^0.70.6",
     "@types/react-native-vector-icons": "^6.4.12",
