feat: ms appcenter

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@tradle/react-native-http": "^2.0.1",
     "add": "^2.0.6",
+    "appcenter": "4.4.5",
+    "appcenter-analytics": "4.4.5",
+    "appcenter-crashes": "4.4.5",
     "assert": "^2.0.0",
     "decimal.js": "^10.4.2",
     "events": "^3.3.0",
