--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "events": "^3.3.0",
     "https-browserify": "~1.0.0",
     "jsdk": "^1.0.0-Alpha.7",
-    "mobx": "^6.6.2",
+    "mobx": "^6.7.0",
     "mobx-persist-store": "^1.1.2",
-    "mobx-react": "^7.5.3",
+    "mobx-react": "^7.6.0",
     "native-base": "^3.4.21",
     "object-path": "^0.11.8",
     "process": "^0.11.10",
@@ -48,7 +48,7 @@
     "react-native-crypto": "^2.2.0",
     "react-native-keychain": "^8.1.1",
     "react-native-os": "^1.2.6",
-    "react-native-pager-view": "6.0.2",
+    "react-native-pager-view": "^6.1.0",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.4.1",
