--- a/tsconfig.json
+++ b/tsconfig.json
@@ -121,7 +121,7 @@
   "exclude": [
     "node_modules",
     "babel.config.cjs",
-    "metro.config.cjs",
+    "metro.config.js",
     "jest.config.js"
   ]
 }
