--- a/package.json
+++ b/package.json
@@ -21,15 +21,14 @@
     "@oneverse/identify": "^1.7.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-clipboard/clipboard": "^1.11.1",
+    "@react-native-firebase/app": "^16.4.5",
+    "@react-native-firebase/firestore": "^16.4.5",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@tradle/react-native-http": "^2.0.1",
     "add": "^2.0.6",
-    "appcenter": "4.4.5",
-    "appcenter-analytics": "4.4.5",
-    "appcenter-crashes": "4.4.5",
     "assert": "^2.0.0",
     "decimal.js": "^10.4.2",
     "events": "^3.3.0",
